# Caliper-Lab-Assignment

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: chunks.jsonl  dataset.csv  dataset.jsonl
outputs_gemini/: dataset.csv  dataset.jsonl  rejected.jsonl
src/qa_pipeline/: __init__.py  chunking.py  cli.py  llm.py  models.py  parsing.py  pipeline.py  writers.py
tests/: test_chunking.py  test_llm.py  test_parsing.py
