[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caliper-lab-assignment"
version = "0.1.0"
description = "Pipeline for generating verified QA datasets from SEC filings."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
